Avoid nowrap as it foils layout on narrow displays

--- a/src/assets/css/_code.scss
+++ b/src/assets/css/_code.scss
@@ -5,7 +5,6 @@ code, kbd, pre, samp, a.cmd {
   padding: 0;
   letter-spacing: -0.25px;
   font-size: 0.875em;
-  white-space: nowrap;
 }
 
 h1, h2, h3, h4, h5 {
@@ -20,7 +19,6 @@ code.lit {
   font-weight: inherit;
   padding: 1px 4px;
   border-radius: 1px;
-  white-space: nowrap;
 }
 
 a.cmd {
