--- a/src/assets/css/_content.scss
+++ b/src/assets/css/_content.scss
@@ -96,10 +96,6 @@ img.md {
     border: none;
   }
 
-  td.dt {
-    white-space: nowrap;
-  }
-
   td.dd {
     width: 100%;
   }
